--- a/views/category.hbs
+++ b/views/category.hbs
@@ -7,17 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Блог</title>
+    <title>Категории</title>
 </head>
 <body>
+<a href="/">на главную</a>
 
-<!--{{#each categories}}
-    <a href="">{{this.name}}</a>
-{{/each}}-->
-
-<h1>Блог о жизни Автомобильного спорта</h1>
-
-<a href="/articles">все статьи</a>
+<form action="postCategory" method="post">
+    <div class="form-inner">
+        <h3>Добавление категории</h3>
+        <label for="title">Название категории</label>
+        <input class="form-control" type="text" name="category" placeholder="Категория">
+        <input type="submit" value="Отправить">
+    </div>
+</form>
 
 </body>
 </html>
