--- a/views/article.hbs
+++ b/views/article.hbs
@@ -7,21 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Статьи</title>
+    <title>Статья</title>
 </head>
 <body>
-<a href="/">на главную</a>
-<h1>Все статьи</h1>
-<a href="/article/new">добавить новую статью</a>
+<a href="/article/all">Все статьи</a>
+
 <div class="card mb-3">
-    {{#each articles}}
-        <a href="{{this.id}}">
-            <h4 class="card-header">{{this.title}}</h4>
-        </a>
-        <div class="card-body">
-            <p class="card-text">{{this.content}}</p>
-        </div>
-    {{/each}}
+    <h2 class="card-header">{{this.article.title}}</h2>
+    <div class="card-body">
+        <p class="card-text">{{this.article.content}}</p>
+    </div>
 </div>
+
 </body>
 </html>
