--- a/views/article.hbs
+++ b/views/article.hbs
@@ -10,6 +10,7 @@
     <title>Статья</title>
 </head>
 <body>
+
 <a href="/article/all">Все статьи</a>
 
 <div class="card mb-3">
@@ -18,6 +19,8 @@
         <p class="card-text">{{this.article.content}}</p>
     </div>
 </div>
+
+<a href="/article/{{this.article.id}}/delete" class="btn btn-danger">удалить</a>
 
 </body>
 </html>
