--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -11,13 +11,20 @@
 </head>
 <body>
 
-<!--{{#each categories}}
-    <a href="">{{this.name}}</a>
-{{/each}}-->
+<div class="container" style="width: 1200px">
 
-<h1>Блог о жизни Автомобильного спорта</h1>
+    <h1>Блог для оттачивания навыков написания TypeScript</h1>
 
-<a href="/articles">все статьи</a>
+    <ul class="nav justify-content-center nav-pills">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/article/all">Все статьи</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/book/all">Книжки</a>
+        </li>
+    </ul>
+
+</div>
 
 </body>
 </html>
