--- a/views/book/book.hbs
+++ b/views/book/book.hbs
@@ -7,21 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Книги</title>
+    <title>Книга</title>
 </head>
 <body>
-<a href="/">на главную</a>
-<h1>Все книги = {{count}}</h1>
-<a href="/book/new">добавить новую книгу</a>
+
+<a href="/book/all">Все книги</a>
+
 <div class="card mb-3">
-    {{#each books}}
-        <a href="{{this.id}}">
-            <h4 class="card-header">{{this.title}}</h4>
-        </a>
-        <div class="card-body">
-            <p class="card-text">{{this.author}}</p>
-        </div>
-    {{/each}}
+    <h2 class="card-header">{{this.book.title}}</h2>
+    <div class="card-body">
+        <p class="card-text">{{this.book.author}}</p>
+    </div>
 </div>
+
+<a href="/book/{{this.book.id}}/delete" class="btn btn-danger">удалить</a>
+
 </body>
 </html>
