--- a/views/article/article.hbs
+++ b/views/article/article.hbs
@@ -20,6 +20,7 @@
     </div>
 </div>
 
+<a href="/article/{{this.article.id}}/update" class="btn btn-danger">изменить</a>
 <a href="/article/{{this.article.id}}/delete" class="btn btn-danger">удалить</a>
 
 </body>
